# GearBind

./: INSTALL.md  QUICKSTART.md  README.md  example_workflow.sh  install_macos_conda.sh  install_uv_simple.py  install_with_uv.sh  install_with_uv_macos.sh  pyproject.toml  requirements.txt
KJA_V1_scripts/older/: example_master.py  gen_muts_withFoldx.py  multiantigens.py  run_gearbind_predictions.py
config/: cr3022_cdr_regions.yaml  test_regions.yaml
data/cr3022_saturation/: data.csv
data/cr3022_saturation_new/: data.csv
data/test_cr3022/: data.csv
foldx/: README.md
gearbind/: dataset.py
script/: generate_mutants_foldx.py  predict_gearbind.py
